Prevent the warning labels from wrapping

--- a/src/routes/bibliotheke.module.sass
+++ b/src/routes/bibliotheke.module.sass
@@ -19,6 +19,7 @@ span.ousynodos
   border-radius: 2px
   padding: 0 4px
   align-self: start
+  white-space: nowrap
 
 div.ousynodos
   font-size: var(--font-size-s)
